fix: change footer to use col-lg-auto and space between for even gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -203,9 +203,14 @@ nav .dropdown-menu.notification-dropdown{
 }
 
 .footer-links-offset{
-    margin-top: 46px;
     line-height: 32px;
     list-style: none;
+}
+
+@media (min-width: 992px) {
+    .footer-links-offset {
+        margin-top: 46px;
+    }
 }
 
 .footer a{
